[package]
name = "SocketControllerRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
ioctl-sys = "0.5"

uinput = { git = "https://github.com/positiveway/rust-uinput", branch = "master" }