[package]
name = "RemoteControllerRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-std = { version = "1.12.0", features = ["attributes"] }
#async-std-hidg = "0.1.0"
#hidg="0.1.0"
mouse-keyboard-input = { git = "https://github.com/positiveway/mouse-keyboard-input", branch = "main" }